“决策树：复习与剪枝”

--- a/5. 决策树.ipynb
+++ b/5. 决策树.ipynb
@@ -13,7 +13,8 @@
    "source": [
     "1. 什么是决策树？\n",
     "2. 决策树算法包括哪些？\n",
-    "3. 如何进行特征选择？"
+    "3. 如何进行特征选择？\n",
+    "4. 信息增益比是什么？相比于信息增益有什么好处？"
    ]
   },
   {
@@ -30,7 +31,7 @@
     "$$H(D) = -\\sum_{k=1}^K{\\frac{|C_k|}{|D|}log_2 \\frac{|C_k|}{|D|}}$$\n",
     "$$H(D|A) = \\sum_{i=1}^{n}{\\frac{|D_i|}{|D|}H(D_i)}$$\n",
     "\n",
-    "其中H(D)是数据集$D$的熵，$D(D_i)$是数据集$D_i$的熵，$H(H|A)$是数据集D对特征A的条件熵。$D_i$是D中特征A取第i个值的样本子集，$C_k$是D中属于第k类的样本的子集。$n$是特征A取值的个数，K是类的个数。\n",
+    "其中H(D)是数据集$D$的熵，$H(D_i)$是数据集$D_i$的熵，$H(D|A)$是数据集D对特征A的条件熵。$D_i$是D中特征A取第i个值的样本子集，$C_k$是D中属于第k类的样本的子集。$n$是特征A取值的个数，K是类的个数。\n",
     "\n",
     "（2）样本集合D对特征A的信息增益比（C4.5）\n",
     "$$g_R(D,A)=\\frac{g(D,A)}{H(D)}$$\n",
@@ -41,16 +42,39 @@
     "特征A条件下集合D的基尼指数：\n",
     "$$Gini(D,A)=\\frac{|D_1|}{|D|}Gini(|D_1|)+\\frac{|D_2|}{|D|}Gini(D_2)$$\n",
     "\n",
+    "\n",
     "4. 决策树的生成。通常使用信息增益最大、信息增益比最大或基尼指数最小作为特征选择的准则。决策树的生成往往通过计算信息增益或者其他指标，从根节点开始，递归的产生决策树。这相当于用信息增益或其他准则不断地选取局部最优的特征，或将训练集分割为能够基本正确分类的子集。\n",
     "\n",
-    "5. 决策树的剪枝。由于生产决策树存在过拟合问题，需要对它进行剪枝，以简化学到的决策树。决策树的剪枝，往往从已生产的树上剪掉一些叶节点或叶节点以上的子树，并将其父节点或跟节点作为新的叶节点，从而简化生成的决策树。"
+    "5. 决策树的剪枝。由于生产决策树存在过拟合问题，需要对它进行剪枝，以简化学到的决策树。决策树的剪枝，往往从已生产的树上剪掉一些叶节点或叶节点以上的子树，并将其父节点或跟节点作为新的叶节点，从而简化生成的决策树。\n",
+    "\n",
+    "6. 决策树的剪枝：预剪枝与后剪枝\n",
+    "    1. yujianz\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. ID3 算法的缺点：\n",
+    "    - 信息增益偏向取值较多的特征。当特征取值较多时，根据此特征划分更容易得到纯度更高的子集，因此划分之后的熵更低，由于划分前的熵是一定的，因此信息增益更大，因此信息增益比较 偏向取值较多的特征。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\software\\anaconda\\lib\\site-packages\\numpy\\_distributor_init.py:32: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "D:\\software\\anaconda\\lib\\site-packages\\numpy\\.libs\\libopenblas.PYQHXLVVQ7VESDPUVUADXEVJOBGHJPAY.gfortran-win_amd64.dll\n",
+      "D:\\software\\anaconda\\lib\\site-packages\\numpy\\.libs\\libopenblas.TXA6YQSD3GCQQC22GEQ54J2UDCXDXHWN.gfortran-win_amd64.dll\n",
+      "  stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -59,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +307,7 @@
        "14  老年   否      否   一般  否"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +343,7 @@
        "0.6730116670092565"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,13 +366,13 @@
     "    ans = 0\n",
     "    for x in sel_feature_vals:\n",
     "        t_dataset = datasets[datasets[sel_feature]==x]\n",
-    "        ans = len(t_dataset)/len(datasets) * calc_ent(t_dataset)\n",
+    "        ans += len(t_dataset)/len(datasets) * calc_ent(t_dataset)\n",
     "    return ans"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -356,10 +380,10 @@
     {
      "data": {
       "text/plain": [
-       "0.1668008078460626"
+       "0.6154752525189002"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,48 +675,6 @@
    "source": [
     "tree.predict(['老年', '否', '否', '一般'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
