--- a/FM&FFM&DeepFM.ipynb
+++ b/FM&FFM&DeepFM.ipynb
@@ -117,6 +117,105 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "## FFM模型学习\n",
+    "\n",
+    "为了方便推导，这里省略FFM的一次项和常数项，公式为：\n",
+    "\n",
+    "$$\\phi(w,x)=\\sum_{a=1}^d\\sum_{b=a+1}^d{(w_{a,f_b}w_{b,f_a})x_a,x_b}$$\n",
+    "\n",
+    "FFM模型使用logistic loss作为损失函数，并加上L2正则化：\n",
+    "\n",
+    "$$L = \\sum_{i=1}^N{log(1+exp(-y_i\\phi(w,x_i))) + \\frac{\\lambda}{2}\\|w\\|^2}$$\n",
+    "\n",
+    "采用随机梯度下降来(SGD)来优化损失函数，因此，损失函数只采用单个样本的损失：\n",
+    "\n",
+    "$$L=log(1+exp(-y_i\\phi(w,x_i))) + \\frac{\\lambda}{2}\\|w\\|^2$$\n",
+    "\n",
+    "对于每次迭代，选取一条数据(x,y)，然后对$w_{a,f_b}$和$w_{b,f_a}$求偏导：\n",
+    "\n",
+    "$$g_{a,f_b}=\\frac{\\partial L}{\\partial w_{a,f_b}}=\\kappa\\cdot w_{b,f_a}x_ax_b+\\lambda w_{a,f_b}$$\n",
+    "$$g_{b,f_a}=\\frac{\\partial L}{\\partial w_{b,f_a}}=\\kappa\\cdot w_{a,f_b}x_ax_b+\\lambda w_{b,f_a}$$\n",
+    "\n",
+    "其中$\\kappa = \\frac{-y}{1+exp(y\\phi(w,x))}$\n",
+    "\n",
+    "设$g_{t,j}$是第t轮第j个参数的梯度，则SGD和采用Adagrad的参数更新公式分别如下：\n",
+    "\n",
+    "$$SGD: w_{t+1,j}=w_{t,j}-\\eta \\cdot g_{t,j}$$\n",
+    "$$Adagrad: w_{t+1,j}=w_{t,j}-\\frac{\\eta}{\\sqrt{G_{t,jj}+\\epsilon}}\\cdot g_{t,j}$$\n",
+    "\n",
+    "Adagrad在学习率$\\eta$上还除以一项$\\sqrt{G_{t,jj}+\\epsilon}$. $\\epsilon$是平滑项，防止分母为0. $G_{t,jj}=\\sum_{l=1}^tg_{l,jj}^2$即为$G_{t,jj}$的对角矩阵，每个对角线位置的值为参数$w_j$每一轮的平方和，可以看出，随着迭代的进行，每个参数的历史梯度累加到一起，使得每个参数的学习率逐渐减少。"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "- 要使用FFM模型，特征需要转化为“field_id:feature_id:value”格式，相比LibSVM的格式多了field_id，即特征所属的field的编号，feature_id是特征编号，value为特征的值\n",
+    "- FFM模型对于one-hot后类别特征十分有效，但是如果数据不够稀疏，可能相比其它模型提升没有稀疏的时候那么大，此外，对于数值型的数据效果不是特别的好"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "![](./FM.png)\n",
+    "![](./FM-DNN.png)\n",
+    "![](./DeepFM.png)\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "DeepFM的架构：\n",
+    "\n",
+    "1. 输入的是稀疏特征的id\n",
+    "2. 进行一层lookup之后得到id的稠密embedding\n",
+    "3. 这个embedding一方面作为隐向量输入到FM层进行计算\n",
+    "4. 同时该embedding进行聚合之后输入到一个DNN模型\n",
+    "5. 然后将FM层和DNN层的输入求和之后进行co-train\n",
+    "\n",
+    "- DeepFM目的是同时学习低阶和高阶的特征交叉，主要由FM和DNN两部分组成，底部共享同样的输入。模型可以表示为：\n",
+    "\n",
+    "$$\\hat{y}=sigmoid(y_{FM}+y_{DNN})$$\n",
+    "\n",
+    "### FM部分\n",
+    "\n",
+    "$$y_{FM}=<w,x> + \\sum_{i=1}^d\\sum_{j=i+1}^d<V_i,V_j>x_i\\cdot x_j$$\n",
+    "\n",
+    "### Deep部分\n",
+    "\n",
+    "- 深度部分是一个前馈神经网络，与图像或语音类的输入不同，CTR的输入一般是极其稀疏的，因此需要重新设计网络结构。在第一层隐藏层之前，引入一个嵌入层来完成输入向量压缩到低位稠密向量\n",
+    "- 尽管不同field的输入长度不同，但是embedding之后向量的长度均为k\n",
+    "- 在FM中得到的隐变量$V_{ik}$现在作为嵌入层网络的权重\n",
+    "\n",
+    "![](./DeepFM-2.png)\n",
+    "\n",
+    "\n",
+    "- 嵌入层的输出为$a^{(0)}=[e_1,e_2,...,e_m]$，其中$e_i$是嵌入层的第i个field，m是field的个数，前向过程将嵌入层的输出输入到隐藏层为：\n",
+    "$$a^{l+1}=\\sigma(W^{l}a^{l}+b^{l})$$\n",
+    "- 其中l是层数，σ是激活函数，W(l)是模型的权重，b(l)是l层的偏置，因此，DNN得预测模型表达为：\n",
+    "$$y_{DNN}=W^{|H|+1} \\cdot a^{|H|}+b^{|H|+1}$$\n",
+    "其中，|H|为隐藏层层数。"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "https://www.biaodianfu.com/ctr-fm-ffm-deepfm.html\n",
+    "https://blog.csdn.net/wyfiveron/article/details/106318494"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
