--- a/GBDT.ipynb
+++ b/GBDT.ipynb
@@ -54,7 +54,9 @@
     "- 然后基于调整后的样本分布来训练下一个基学习器；\n",
     "- 如此重复进行，直至基学习器数目达到事先指定的值T；\n",
     "- 最终将这T个基学习器进行加权结合。\n",
-    "\n"
+    "\n",
+    "\n",
+    "4. Boosting的最大好处在于，每一步的残差计算其实变相的增大的分错的样本的权重。\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -112,7 +114,9 @@
    "source": [
     "## 2. GBDT 梯度提升决策树\n",
     "\n",
-    "**核心思想：用负梯度近似模拟残差**\n",
+    "**核心思想：每棵树都去拟合上颗树的负梯度。在GBDT，无论损失函数是什么形式，每个决策树拟合的都是负梯度。准确的说，不是用负梯度代替残差，而是当损失函数是均方误差时，负梯度刚好是残差，残差只是特例。**\n",
+    "\n",
+    "**GBDT的求解过程就是梯度下降在函数空间中的优化过程**\n",
     "\n",
     "输入：训练数据集$T=\\{(x_1,y_1),(x_2,y_2),...,(x_ny_n)\\}, x_i\\in X \\subseteq R^n, y_i \\in \\subseteq R$; 损失函数 $L(y,f(x))$\n",
     "\n",
@@ -152,11 +156,15 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- GBDT只能由回归树组成。\n",
+    "- GBDT只能串行生成。\n",
+    "- GBDT对异常值比较敏感\n",
+    "- GBDT是减少模型的偏差\n",
+    "- GBDT需要进行特征归一化"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
