--- a/日志.md
+++ b/日志.md
@@ -6,12 +6,18 @@
 
 [2021.3.31 FM&FFM](#2021.3.31)
 
+[2021.3.31 FFM&DeepFM](#2021.4.1)
+
 
 # 2021.3.29
  <span id="2021.3.29"></span>
 
 - [x] 了解boost tree
-- [ ] 了解GBDT
+  - [x] 提升树表现为决策树的加法模型。他构造T课树，除了第一颗树，每个树都在拟合上颗树造成的残差。
+  - [x] $f_M(x)=\sum_{m=1}^MT_m(x)$
+  - [x] 提升树选择依据：最小化平方误差
+- [x] 了解GBDT
+  - [x] GBDT是在提升树的基础上进行优化。每棵树不去拟合残差了，而是去拟合负梯度。
 
 # 2021.3.30
  <span id="2021.3.30"></span>
@@ -30,6 +36,11 @@
   - [ ] 提出FM的意义？
 - [ ] 初步了解FFM模型，数学推导还未了解。
 
+# 2021.4.1
+ <span id="2021.4.1"></span>
 
-
-
+- [x] 理解FFM模型算法
+  - [ ] 相比于FM模型，FFM引入了field的概念，特征可以被归类到field中。
+  - [ ] $y(x)=w_0+\sum_{i=1}^d{w_ix_i}+\sum_{i+1}^d{\sum_{j=i+1}^d{(w_{i,f_j}\cdot w_{j,f_i})x_ix_j}}$
+- [x] 理解DeepFM模型算法
+  - [ ] DeepFM目的是同时学习低阶和高阶的特征交叉，主要由FM和DNN两部分组成，底部共享同样的输入。模型可以表示为 $\hat{y}=sigmoid(y_{FM}+y_{DNN})$
