--- a/日志.md
+++ b/日志.md
@@ -1,13 +1,14 @@
 
 
-[2021.3.31 Boost Tree&GBDT](#2021.3.29)
+[2021.3.29 Boost Tree&GBDT](#2021.3.29)
 
-[2021.3.31 XGBoost](#2021.3.30)
+[2021.3.30 XGBoost](#2021.3.30)
 
 [2021.3.31 FM&FFM](#2021.3.31)
 
-[2021.3.31 FFM&DeepFM](#2021.4.1)
+[2021.4.1 FFM&DeepFM](#2021.4.1)
 
+[2021.4.2 XGBoost](#2021.4.2)
 
 # 2021.3.29
  <span id="2021.3.29"></span>
@@ -44,3 +45,16 @@
   - [ ] $y(x)=w_0+\sum_{i=1}^d{w_ix_i}+\sum_{i+1}^d{\sum_{j=i+1}^d{(w_{i,f_j}\cdot w_{j,f_i})x_ix_j}}$
 - [x] 理解DeepFM模型算法
   - [ ] DeepFM目的是同时学习低阶和高阶的特征交叉，主要由FM和DNN两部分组成，底部共享同样的输入。模型可以表示为 $\hat{y}=sigmoid(y_{FM}+y_{DNN})$
+
+# 2021.4.2
+ <span id="2021.4.2"></span>
+
+ - [x] 初步了解XGBoost
+   - [ ] XGBoost是GBDT的工程实现，它在GBDT的基础上做了很多优化。
+   - [ ] 正则项：防止过拟合
+   - [ ] 泰勒二次展开
+   - [ ] GBDT的基分类器只能是回归树，但是XGBoost支持多种类型的基分类器。
+   - [ ] XGBoost则采用了与随机森林相似的策略，支持对数据进行采样
+   - [ ] 缺失值处理：传统GBDT没有设计对缺失值进行处理，XGBoost能够自动学习出缺失值的处理策略
+   - [ ] 并行化：传统GBDT没有进行并行化设计，注意不是tree维度的并行，而是特征维度的并行。XGBoost预先将每个特征按特征值排好序，存储为块结构，分裂结点时可以采用多线程并行查找每个特征的最佳分割点，极大提升训练速度。
+ - [x] 理论上基本理解，但是工程实现以及实际调参还需要多加练习。 
