--- a/日志.md
+++ b/日志.md
@@ -10,6 +10,8 @@
 
 [2021.4.2 XGBoost](#2021.4.2)
 
+[2021.4.2 随机森林&AdaBoost](#2021.4.3)
+
 # 2021.3.29
  <span id="2021.3.29"></span>
 
@@ -58,3 +60,16 @@
    - [ ] 缺失值处理：传统GBDT没有设计对缺失值进行处理，XGBoost能够自动学习出缺失值的处理策略
    - [ ] 并行化：传统GBDT没有进行并行化设计，注意不是tree维度的并行，而是特征维度的并行。XGBoost预先将每个特征按特征值排好序，存储为块结构，分裂结点时可以采用多线程并行查找每个特征的最佳分割点，极大提升训练速度。
  - [x] 理论上基本理解，但是工程实现以及实际调参还需要多加练习。 
+
+# 2021.4.3
+ <span id="2021.4.3"></span>
+
+ - [x] 学习了随机森林
+   - [ ] 属于Bagging集成学习，各个基学习器之间不存在依赖关系
+   - [ ] 随机森林的基学习器都是CART树
+   - [ ] 每棵树的训练集都是采样得到的，且只选取部分特征进行分裂
+   - [ ] 随机森林是优化方差
+ - [x] 了解了AdaBoost 
+   - [ ] 一种Boosting方法
+   - [ ] 思想：每轮训练后，都会降低被正确分类的样本的权重，增加被错误分类的样本权重。
+   - [ ] 用指数损失函数作为损失函数
