--- a/日志.md
+++ b/日志.md
@@ -12,6 +12,8 @@
 
 [2021.4.2 随机森林&AdaBoost](#2021.4.3)
 
+[2021.4.2 时序数据&分类问题](#2021.4.6)
+
 # 2021.3.29
  <span id="2021.3.29"></span>
 
@@ -73,3 +75,10 @@
    - [ ] 一种Boosting方法
    - [ ] 思想：每轮训练后，都会降低被正确分类的样本的权重，增加被错误分类的样本权重。
    - [ ] 用指数损失函数作为损失函数
+
+# 2021.4.6
+ <span id="2021.4.6"></span>
+
+ - [x] 问题：给定时序数据，预测该数据属于哪一类？
+   - [ ] 想法一：从时序数据中提取各种特征，如：均值、方差等，然后用lightgbm建模，发现无效
+   - [ ] 改用LSTM网络，已编写完代码，待研究效果
