--- a/日志.md
+++ b/日志.md
@@ -10,9 +10,11 @@
 
 [2021.4.2 XGBoost](#2021.4.2)
 
-[2021.4.2 随机森林&AdaBoost](#2021.4.3)
+[2021.4.3 随机森林&AdaBoost](#2021.4.3)
 
-[2021.4.2 时序数据&分类问题](#2021.4.6)
+[2021.4.6 时序数据&分类问题](#2021.4.6)
+
+[2021.4.7 None](#2021.4.7)
 
 # 2021.3.29
  <span id="2021.3.29"></span>
@@ -82,3 +84,11 @@
  - [x] 问题：给定时序数据，预测该数据属于哪一类？
    - [ ] 想法一：从时序数据中提取各种特征，如：均值、方差等，然后用lightgbm建模，发现无效
    - [ ] 改用LSTM网络，已编写完代码，待研究效果
+
+# 2021.4.7
+ <span id="2021.4.7"></span>
+
+ - [x] 螺旋矩阵：根据坐标求值
+ - [x] 学习了LSTM
+   - [ ] LSTM，长短时记忆网络，被提出用于解决长依赖问题
+   - [ ] LSTM主要由门来保护和控制细胞状态，有三个门：忘记门、输入门层、输出门层 
