--- a/日志.md
+++ b/日志.md
@@ -14,7 +14,7 @@
 
 [2021.4.6 时序数据&分类问题](#2021.4.6)
 
-[2021.4.7 None](#2021.4.7)
+[2021.4.7 LSTM](#2021.4.7)
 
 # 2021.3.29
  <span id="2021.3.29"></span>
@@ -92,3 +92,12 @@
  - [x] 学习了LSTM
    - [ ] LSTM，长短时记忆网络，被提出用于解决长依赖问题
    - [ ] LSTM主要由门来保护和控制细胞状态，有三个门：忘记门、输入门层、输出门层 
+
+# 2021.4.8
+ <span id="2021.4.8"></span>
+
+ - [x] 做PPT：对抗样本与数据建模
+ - [ ] 学习了LSTM的变体GRU和BiLSTM
+ - [ ] 发现现在做的项目中数据是不平衡的，采用过采样法和SMOTE进行优化
+   - [ ] 过采样：score 200+
+   - [ ] SMOTE auto: 300+
