--- a/项目/时序数据-心电图预测/笔记.md
+++ b/项目/时序数据-心电图预测/笔记.md
@@ -33,3 +33,65 @@ $$abs-sum=\sum_{j=1}^n \sum_{i=1}^4{|y_i-a_i|}$$
 
 ## LSTM （神经网络的baseline）
 
+### v1版本
+
+```
+class Model(nn.Module):
+    def __init__(self, input_size=1, hidden_layer_size=300, output_size=4):
+        super(Model, self).__init__()
+        self.hidden_layer_size = hidden_layer_size
+        self.lstm = nn.LSTM(
+            input_size=input_size,
+            hidden_size=hidden_layer_size,
+            num_layers = 2,
+            batch_first=True
+        )  
+
+        self.linear = nn.Linear(hidden_layer_size, 4)
+
+    def forward(self, input_seq):
+
+        r_out, (h_n, h_c) = self.lstm(input_seq, None)
+        x = self.linear(r_out[:,-1,:])
+        return x
+```
+
+- num_layers 太多反而不太好，建议设成1
+- 该版本的score 在500+
+
+### v2版本
+
+在v1的基础上增加网络的复杂度
+
+- 增加一层全连接层
+
+```
+class Model(nn.Module):
+    def __init__(self, input_size=1, hidden_layer_size=300, output_size=4):
+        super(Model, self).__init__()
+        self.hidden_layer_size = hidden_layer_size
+        self.lstm = nn.LSTM(
+            input_size=input_size,
+            hidden_size=hidden_layer_size,
+            #num_layers = 2,
+            dropout=0.8,
+            batch_first=True
+        )  
+        self.f1 = nn.Sequential(
+            nn.Linear(hidden_layer_size, 64),
+            nn.Dropout(0.8),
+            nn.ReLU()
+        )
+        self.f2 = nn.Sequential(
+            nn.Linear(64,output_size),
+            nn.Softmax()
+        )
+    
+    def forward(self, input_seq):
+        r_out, (h_n, h_c) = self.lstm(input_seq, None)
+        x = self.f1(r_out[:,-1,:])
+        x = self.f2(x)
+        return x
+        ```
+
+- 结果：网络很难收敛，建议去掉多余的全连接层
