--- a/日志.md
+++ b/日志.md
@@ -16,6 +16,8 @@
 
 [2021.4.7 LSTM](#2021.4.7)
 
+[2021.4.8 GRU&BiLSTM](#2021.4.8)
+
 # 2021.3.29
  <span id="2021.3.29"></span>
 
@@ -101,3 +103,10 @@
  - [ ] 发现现在做的项目中数据是不平衡的，采用过采样法和SMOTE进行优化
    - [ ] 过采样：score 200+
    - [ ] SMOTE auto: 300+
+
+# 2021.4.9
+ <span id="2021.4.9"></span>
+
+ - [x] 发现加入高斯噪声会降低模型的性能
+ - [x] 采用TCN也能取得比较好的结果
+ - [x] 目前发现最好的模型效果在190+左右，下一步考虑融合模型以及再研究一下特征工程。
