--- a/项目/时序数据-心电图预测/笔记.md
+++ b/项目/时序数据-心电图预测/笔记.md
@@ -92,6 +92,34 @@ class Model(nn.Module):
         x = self.f1(r_out[:,-1,:])
         x = self.f2(x)
         return x
-        ```
+```
+
 
 - 结果：网络很难收敛，建议去掉多余的全连接层
+
+
+## v3 GRU 
+
+将LSTM换成GRU，结果：
+
+- 速度更快
+- 效果差不多
+- score:300+
+
+## 数据不平衡处理
+
+- 过采样：score 200+
+- SMOTE auto: 300+
+
+## 尝试加高斯噪声，效果变差
+
+
+
+
+
+
+对于心跳信号分类预测，我发现原始数据比较干净，都在0与1之间，因此我首先用LSTM直接对数据进行处理，得到一个baseline分数。然后在这个baseline基础上进行优化。优化点如下：
+1. 发现数据的类标签是不平衡的，因此我尝试过采样和欠采样的方法预处理数据，发现，过采样能有效提高模型的性能。
+2. 通过观察数据发现，不同类别的心跳信号有不一样的空间结构，因此考虑用一维的CNN模型，发现单独用CNN的结果与用LSTM差不多。
+3. TCN是针对时序数据而设计出来的网络，因此我也使用的该模型进行了尝试，发现这单个模型的效果比LSTM和CNN都要好。
+4. 为了提高模型的泛化能力，我最终对前面用到的模型进行一个融合，作为比赛的最终方案。
