--- a/项目/时序数据-心电图预测/笔记.md
+++ b/项目/时序数据-心电图预测/笔记.md
@@ -113,9 +113,10 @@ class Model(nn.Module):
 
 ## 尝试加高斯噪声，效果变差
 
+## Ataintion模型效果很差
 
-
-
+## 尝试模型融合
+    - 加权融合效果不错
 
 
 对于心跳信号分类预测，我发现原始数据比较干净，都在0与1之间，因此我首先用LSTM直接对数据进行处理，得到一个baseline分数。然后在这个baseline基础上进行优化。优化点如下：
